# remote

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
net/: Cargo.toml
net/src/: client.rs  lib.rs  server.rs
server/: Cargo.toml
server/src/: main.rs
