[workspace]
members = ["client", "net", "server"]

[workspace.dependencies]
# external dependencies
bevy = "0.12.1"
bevy-inspector-egui = "0.21.0"
bincode = "1.3.3"
serde = { version = "1.0.193", features = ["derive"] }
# internal dependencies
net = { path = "net" }

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
